objects/btc__c.object
<CustomObject>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>faculty_name__c</fullName>
        <label>faculty name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ramu</fullName>
                </value>
                <value>
                    <fullName>AASA</fullName>
                </value>
                <value>
                    <fullName>Janu</fullName>
                </value>
                <value>
                    <fullName>Sam</fullName>
                </value>
                <value>
                    <fullName>Akhil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sss__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sss</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>sss__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>sss__c</referenceTo>
        <relationshipLabel>btcs</relationshipLabel>
        <relationshipName>btcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>btc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>btc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>btcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>